--- a/galasa-parent/dev.galasa.framework.api.resources/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.resources/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.openapi.generator' version "5.0.1"
     id 'galasa.api.server'
 
-    // testCompile requires Java plugin.
+    // testImplementation requires Java plugin.
     id 'java'
 }
 
@@ -19,8 +19,8 @@ dependencies {
 
     implementation 'org.apache.commons:commons-collections4:4.4'
 
-    testCompile 'org.apache.commons:commons-lang3:3.14.0'
-    testCompile project(':dev.galasa.framework').sourceSets.test.output
+    testImplementation 'org.apache.commons:commons-lang3:3.14.0'
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
     testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
