--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -123,9 +123,9 @@ configurations {
     release_metadata
 }
 
-def overallManifestFilePath = "$buildDir/release.yaml"
-def frameworkManifestFilePath = "$buildDir/framework-release.yaml"
-def apiManifestFilePath = "$buildDir/api-release.yaml"
+def overallManifestFilePath = layout.buildDirectory.file("release.yaml").get().asFile.path
+def frameworkManifestFilePath = layout.buildDirectory.file("framework-release.yaml").get().asFile.path
+def apiManifestFilePath = layout.buildDirectory.file("api-release.yaml").get().asFile.path
 
 def overallHeader = """#
 # Copyright contributors to the Galasa project
