--- a/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
+++ b/galasa-parent/buildSrc/src/main/groovy/galasa.java.gradle
@@ -41,9 +41,9 @@ tasks.withType(Sign) {
 }
 
 task gitHash(dependsOn : 'classes') {
-    def dir    = file("${buildDir}/githash")
-    def meta   = file("${buildDir}/githash/META-INF")
-    def result = file("${buildDir}/githash/META-INF/git.hash")
+    def dir    = layout.buildDirectory.dir("githash").get().asFile
+    def meta   = layout.buildDirectory.dir("githash/META-INF").get().asFile
+    def result = layout.buildDirectory.file("githash/META-INF/git.hash").get().asFile
 
     outputs.dir meta
     tasks.jar.dependsOn('gitHash')
