Created user servlet and ednpoint
Signed-off-by: Aashir Siddiqui <aashir_sidiki@hotmail.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -35,5 +35,6 @@ include 'dev.galasa.framework.api.runs'
 include 'dev.galasa.framework.api.testcatalog'
 include 'dev.galasa.framework.docker.controller'
 include 'dev.galasa.framework.k8s.controller'
+include 'dev.galasa.framework.api.users'
 include 'galasa-boot'
 include 'galasa-testharness'
