--- a/galasa-parent/dev.galasa.framework.api.users/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.users/build.gradle
@@ -2,25 +2,25 @@ plugins {
     id 'biz.aQute.bnd.builder'
     id 'galasa.api.server'
 
-    id 'java-test-fixtures'
+    id 'java'
 }
 
-description = 'Framework API - Common Packages'
+description = 'Galasa Users API'
 
 version = '0.36.0'
 
 dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.beans')
+    implementation project(':dev.galasa.framework.api.common')
+
+    implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'dev.galasa:com.auth0.jwt:4.4.0'
 
-    testFixturesImplementation 'javax.servlet:javax.servlet-api:3.1.0'
-    testFixturesImplementation 'org.assertj:assertj-core:3.16.1'
-    testFixturesImplementation 'com.google.code.gson:gson:2.10.1'
-    testFixturesImplementation(project(':dev.galasa.framework'))
-    testFixturesImplementation(project(':dev.galasa.framework.api.beans'))
-    testFixturesImplementation 'javax.validation:validation-api:2.0.1.Final'
-
+    implementation 'dev.galasa:io.grpc.java:1.60.0'
+    compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
+    
+    testImplementation(testFixtures(project(':dev.galasa.framework.api.common')))
 }
 
 // Note: These values are consumed by the parent build process
@@ -34,5 +34,5 @@ ext.includeInMVP          = false
 ext.includeInIsolated     = true
 ext.includeInBOM          = false
 ext.includeInCodeCoverage = true
-ext.includeInJavadoc      = true
+ext.includeInJavadoc      = false
 
