Changed gradle build mode from --debug to --info
Signed-off-by: Aashir Siddiqui <aashir_sidiki@hotmail.com>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -47,7 +47,7 @@ jobs:
           -PsourceMaven=https://development.galasa.dev/gh/maven-repo/maven/ \
           -PcentralMaven=https://repo.maven.apache.org/maven2/ \
           -PtargetMaven=${{ github.workspace }}/repo \
-          --debug
+          --info
           
       - name: Build Framework image for testing
         uses: docker/build-push-action@v5
