--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ temp/
 # Ignore the OpenAPI spec that is automatically placed into the 
 # resources folder to be served up by the OpenAPI servlet
 **/dev.galasa.framework.api.openapi.servlet/**/openapi.yaml
+
+run-test.sh
