corrected JaCoCo report step name
Signed-off-by: Savvas Kyriacou <savvasky@uk.ibm.com>

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -49,7 +49,7 @@ jobs:
           -PtargetMaven=${{ github.workspace }}/repo \
           --info
       
-      - name: Upload test output as artifact
+      - name: Upload Jacoco Reports as artifact
         if: failure()
         uses: actions/upload-artifact@v3
         with:
