--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -1,3 +1,8 @@
+#
+# Copyright contributors to the Galasa project
+#
+# SPDX-License-Identifier: EPL-2.0
+#
 name: PR build
 
 on:
@@ -34,17 +39,18 @@ jobs:
       
       - name: Build servlet beans with openapi2beans
         run: |
-          docker run --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/${{env.NAMESPACE}}/openapi2beans:main generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
+          docker run --rm -v ${{ github.workspace }}:/var/workspace ghcr.io/galasa-dev/openapi2beans:main generate --yaml var/workspace/${{ env.YAML_LOCATION }} --output var/workspace/${{ env.OUTPUT_LOCATION }} --package ${{ env.PACKAGE }}
         env:
-          YAML_LOCATION: "galasa-parent/dev.galasa.framework.api.openapi/src/main/resources/openapi.yaml"  # Update this path
+          YAML_LOCATION: "galasa-parent/dev.galasa.framework.api.openapi/src/main/resources/openapi.yaml"
           OUTPUT_LOCATION: "galasa-parent/dev.galasa.framework.api.beans/src/main/java"
           PACKAGE: "dev.galasa.framework.api.beans.generated"
       
       - name: Build Framework source code
         run: |
           gradle -b galasa-parent/build.gradle check publish --info \
+          --no-daemon --console plain \
           -Dorg.gradle.jvmargs=-Xmx5120M \
-          -PsourceMaven=https://development.galasa.dev/gh/maven-repo/maven/ \
+          -PsourceMaven=https://development.galasa.dev/main/maven-repo/maven/ \
           -PcentralMaven=https://repo.maven.apache.org/maven2/ \
           -PtargetMaven=${{ github.workspace }}/repo
       
