--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: 8.9
+          cache-disabled: true
       
       - name: Build servlet beans with openapi2beans
         run: |
