Add initial decryption logic for reading credentials
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.apache.bcel:bcel:6.7.0'
     implementation 'commons-io:commons-io:2.16.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.yaml:snakeyaml:2.0'
 
     testImplementation project (':dev.galasa')
 
