Mount encryption keys secret in test pods, refactor k8s controller settings + unit tests
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
+++ b/galasa-parent/dev.galasa.framework.k8s.controller/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 description = 'Galasa Kubernetes Controller'
 
-version '0.36.0'
+version '0.38.0'
 
 dependencies {
 
@@ -36,6 +36,7 @@ dependencies {
         }
     }
 
+    testImplementation project(':dev.galasa.framework').sourceSets.test.output
 }
 
 // Note: These values are consumed by the parent build process
