--- a/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.authentication/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(':dev.galasa.framework')
     implementation project(':dev.galasa.framework.api.beans')
     implementation project(':dev.galasa.framework.api.common')
+    implementation project(':dev.galasa.framework.api.users')
 
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'dev.galasa:com.auth0.jwt:4.4.1'
