WIP: Start implementing Secrets APIs
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -32,6 +32,7 @@ include 'dev.galasa.framework.api.openapi.servlet'
 include 'dev.galasa.framework.api.ras'
 include 'dev.galasa.framework.api.resources'
 include 'dev.galasa.framework.api.runs'
+include 'dev.galasa.framework.api.secrets'
 include 'dev.galasa.framework.api.testcatalog'
 include 'dev.galasa.framework.docker.controller'
 include 'dev.galasa.framework.k8s.controller'
